--- a/Nihongo Nexus/src/main/resources/application.properties
+++ b/Nihongo Nexus/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=Nihongo Nexus
+
+# PostgresSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/nihongo_nexus_db
+spring.datasource.username=nihongo
+spring.datasource.password=pnndb
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA and Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=nn_schema
+
+
