A little page/style changes

--- a/Nihongo Nexus/src/main/resources/application.properties
+++ b/Nihongo Nexus/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=Nihongo Nexus
+spring.devtools.livereload.enabled=true
+spring.devtools.livereload.port=35729
+
 
 # PostgresSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/nihongo_nexus_db
