--- a/Nihongo Nexus/pom.xml
+++ b/Nihongo Nexus/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!--SECURITY-->
 
         <dependency>
