--- a/Nihongo Nexus/src/main/resources/application.properties
+++ b/Nihongo Nexus/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Nihongo Nexus
 spring.devtools.livereload.enabled=true
 spring.devtools.livereload.port=35729
+#server.address=nihongo-nexus.com
 
 
 # PostgresSQL
